<resources>
    <string name="app_name">Edificio</string>
    <string name="registrar">Registrar</string>
    <string name="nomenclatura">Nomenclatura</string>
    <string name="piso">Piso</string>
    <string name="metros_cuadrados">Metros Cuadrados</string>
    <string name="precio">Precio</string>
    <string name="tiene_balcon">Tiene Balcon</string>
    <string name="no_tiene_balcon">No tiene Balcon</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="encuentra_sombra">Se encuentra en la sombra</string>
    <string name="no_encuentra_sombra">No se encuentra en la sombra</string>
    <string name="guardar">GUARDAR</string>
    <string name="modificar">MODIFICAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="limpiar_campos">Limpiar Campos</string>
    <string name="Apartamentos">Apartamentos</string>
    <string name="reportes">Reportes</string>
    <string-array name="opciontes_principal">
        <item>@string/registrar</item>
        <item>@string/Apartamentos</item>
        <item>@string/reportes</item>
    </string-array>
    <string name="error_nomenclatura">Digite la nomenclatura</string>
    <string name="error_piso">Ya existen tres apartamentos en este piso</string>
    <string name="error_metros">Digite los metros cuadrados</string>
    <string name="error_precio">Digite el precio</string>
    <string name="error_nomenclatura_igual">Digite una nomenclatura diferente</string>
    <string name="guardado_exitoso">Apartamento Guardada Exitosamente</string>
    <string name="eliminado_exitoso">Apartamento Eliminado Exitosamente</string>
    <string name="modificado_exitoso">Apartamento Modificado Exitosamente</string>
    <string name="confirmacion">Confirmacion</string>
    <string name="mensaje_eliminacion">¿Esta seguro que desea eliminar este Apartamento?</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="buscar">BUSCAR</string>
    <string name="reporte_1">Cuantos apartamentos se encuentran en la sombra y tienen balcon</string>
    <string name="reporte_2">Piso en el que se encuentra el apartamento mas caro</string>
    <string name="reporte_3">Nomenclatura y metros cuadrado del apartamento con mayor tamaño en todo el edificio</string>
    <string name="reporte_4">Promedio de tamaño de los apartamentos por Piso</string>
    <string-array name="opciones_reportes">
        <item>@string/reporte_1</item>
        <item>@string/reporte_2</item>
        <item>@string/reporte_3</item>
        <item>@string/reporte_4</item>
    </string-array>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string-array name="opciones_piso">
        <item>@string/uno</item>
        <item>@string/dos</item>
        <item>@string/tres</item>
        <item>@string/cuatro</item>
        <item>@string/cinco</item>
    </string-array>
    <string name="con_balcon">Con Balcon</string>
    <string name="con_sombra">Con Sombra</string>
    <string name="con_balcon_sombra">Con Balcon y Con Sombra</string>
    <string name="apartamento_caro">El Apartamento Mas Caro Esta En El Piso</string>
    <string name="promedio">Promedio</string>
    <string-array name="opciones_lista_personalizada">
        <item>@string/nomenclatura</item>
        <item>@string/piso</item>
        <item>@string/metros_cuadrados</item>
        <item>@string/precio</item>
    </string-array>
</resources>
